# skreen

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.ts  deno.jsonc  mod.ts  mod_test.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
example/: receipt.ts  template.ts
src/: lib.rs
wasm/: skreen.d.ts  skreen.js  skreen_bg.wasm.d.ts
