[package]
name = "skreen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
png = "0.17"

blitz-html   = { git = "https://github.com/DioxusLabs/blitz" }
blitz-dom    = { git = "https://github.com/DioxusLabs/blitz", default-features = false, features = ["svg", "woff"] }
blitz-paint  = { git = "https://github.com/DioxusLabs/blitz" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz" }
anyrender           = "0.8"
anyrender_vello_cpu = "0.10"
peniko = "0.6"
kurbo = "0.13"
