[package]
name = "skreen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.120"
png = "0.18.1"

blitz-html               = { version = "0.3.0-alpha.2" }
blitz-dom                = { version = "0.3.0-alpha.2", default-features = false, features = ["svg", "woff"] }
blitz-paint              = { version = "0.3.0-alpha.2" }
blitz-traits             = { version = "0.3.0-alpha.2" }
linebender_resource_handle = "0.1.1"
parley                   = { version = "0.9", default-features = false, features = ["std"] }
anyrender           = "0.8"
anyrender_vello_cpu = "0.10"
peniko = "0.6"
kurbo = "0.13"
